--- a/style.css
+++ b/style.css
@@ -65,12 +65,17 @@ input.form-control {
     border-radius: 0;
 }
 
+input.form-control::placeholder {
+    color: white;
+}
+
 input.form-control:focus {
     background: transparent;
     border: 0;
     border-bottom: 2px solid #aaa9a9;
     border-radius: 0;
     outline: none;
+    box-shadow: 0 0 0 0.25rem rgb(140 141 144 / 25%)
 }
 
 textarea#exampleFormControlTextarea1 {
@@ -80,10 +85,15 @@ textarea#exampleFormControlTextarea1 {
     border-radius: 0;
 }
 
+textarea#exampleFormControlTextarea1::placeholder {
+    color: white;
+}
+
 textarea#exampleFormControlTextarea1:focus {
     background: transparent;
     border-bottom: #aaa9a9 solid 2px;
     border-radius: 0;
+    box-shadow: 0 0 0 0.25rem rgb(140 141 144 / 25%)
 }
 
 footer {
@@ -109,4 +119,8 @@ i.fas.fa-map-marker-alt {
 
 a {
     text-decoration: none;
+}
+
+i.fas.fa-bars {
+    font-size: 25px;
 }
